# classification-test

./: .gitignore  README.md  __init__.py  node.py  nodes.py  nodw.py.example  pyproject.toml  requirements.txt
classification/: inference_call.py
classification/dataloaders/: img_pairs_loader.py  img_transforms.py
classification/models/: Classifier.py  ResNet.py  layers.py
classification/trains/: train_builder.py
classification/utils/: feature_vectors_pixel_heatmap.py  make_heatmap.py  make_subsets.py  other.py  remove_small_cc.py
modules/: __init__.py
modules/classification/: README.md  inference.py  main.py
modules/classification/config/: classification.json
modules/classification/dataloaders/: dataloader_builder.py
modules/classification/metrics/: accuracy.py  multiclass_accuracy.py
modules/classification/models/: conv.py  fc.py
modules/classification/tests/: test_MPL.py
modules/classification/trains/: train_MLP.py
modules/classification/utils/: auxiliary.py  divide_to_nxn_images.py  ensamble_heatmap.py  feature_vectors_similarity.py  feature_vectors_window_heatmap.py  make_GT_masks.py  make_valid_GT_mask.py  plot_ROC.py
